crates/iam-grapher/src/output/snapshots/aws_iam_grapher__output__json__tests__error_envelope_scope_not_found_json_shape.snap
---
source: crates/iam-grapher/src/output/json.rs
expression: "error_envelope(\"scope-not-found\")"
---
{
  "error": {
    "code": "scope-not-found",
    "message": "example error message"
  }
}
