crates/iam-grapher/src/output/snapshots/aws_iam_grapher__output__json__tests__error_envelope_unexpected_json_shape.snap
---
source: crates/iam-grapher/src/output/json.rs
expression: "error_envelope(\"unexpected\")"
---
{
  "error": {
    "code": "unexpected",
    "message": "example error message"
  }
}
